<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.example</groupId>
    <artifactId>Test</artifactId>
    <version>1.0-SNAPSHOT</version>

    <!-- Cuando actualices selenium modifica la linea 60 y pico (las devtools) -->
    <!-- Verifica compatibilidad -->
    <properties>
        <selenium.version>4.43.0</selenium.version> <!-- https://mvnrepository.com/artifact/org.seleniumhq.selenium/selenium-java -->
        <junit.version>5.14.2</junit.version> <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
        <junit.platform.version>1.14.2</junit.platform.version>
        <cucumber.version>7.34.2</cucumber.version> <!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-java -->
        <allure.version>2.30.0</allure.version> <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-bom -->
        <json-simple.version>1.1.1</json-simple.version> <!-- https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple -->
        <slf4j-simple.version>2.0.17</slf4j-simple.version> <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
        <log4j-core.version>2.25.3</log4j-core.version> <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
        <log4j-api.version>2.25.3</log4j-api.version> <!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
        <commons-logging.version>1.2</commons-logging.version> <!-- https://mvnrepository.com/artifact/commons-logging/commons-logging -->
        <lombok.version>1.18.38</lombok.version> <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
        <annotations.version>RELEASE</annotations.version> <!-- https://mvnrepository.com/artifact/org.jetbrains/annotations -->
        <webdrivermanager.version>6.3.3</webdrivermanager.version> <!-- https://mvnrepository.com/artifact/io.github.bonigarcia/webdrivermanager -->
        <restassured.version>6.0.0</restassured.version> <!-- https://mvnrepository.com/artifact/io.rest-assured/rest-assured -->
        <maven-compiler-plugin.version>3.14.1</maven-compiler-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-compiler-plugin -->
        <maven-surefire-plugin.version>3.5.4</maven-surefire-plugin.version> <!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding> <!-- https://maven.apache.org/general.html#encoding-warning -->
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding> <!-- https://maven.apache.org/general.html#encoding-warning -->
        <maven.compiler.source>17</maven.compiler.source> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
        <maven.compiler.target>17</maven.compiler.target> <!-- https://maven.apache.org/plugins/maven-compiler-plugin/ -->
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-bom</artifactId>
                <version>${allure.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.cucumber</groupId>
                <artifactId>cucumber-bom</artifactId>
                <version>${cucumber.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <!-- Selenium -->
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
                <artifactId>selenium-devtools-v147</artifactId>
            <version>${selenium.version}</version>
        </dependency>

        <!-- JUnit Platform y Jupiter -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.13.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-api</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.platform</groupId>
            <artifactId>junit-platform-suite-engine</artifactId>
            <version>${junit.platform.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Cucumber (todas 7.34.2) -->
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit-platform-engine</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Allure Report Cucumber Adapter-->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-cucumber7-jvm</artifactId>
            <version>${allure.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- Allure JUnit5 adapter (opcional) -->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-junit5</artifactId>
            <version>${allure.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- REST Assured -->
        <dependency>
            <groupId>io.rest-assured</groupId>
            <artifactId>rest-assured</artifactId>
            <version>${restassured.version}</version>
            <scope>test</scope>
        </dependency>

        <!-- JSON Simple -->
        <dependency>
            <groupId>com.googlecode.json-simple</groupId>
            <artifactId>json-simple</artifactId>
            <version>${json-simple.version}</version>
        </dependency>

        <!-- Commons Logging -->
        <dependency>
            <groupId>commons-logging</groupId>
            <artifactId>commons-logging</artifactId>
            <version>${commons-logging.version}</version>
        </dependency>

        <!-- Lombok -->
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>${lombok.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Log4j -->
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j-core.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j-api.version}</version>
        </dependency>

        <!-- Annotations -->
        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>${annotations.version}</version>
            <scope>compile</scope>
        </dependency>

        <!-- WebDriverManager -->
        <dependency>
            <groupId>io.github.bonigarcia</groupId>
            <artifactId>webdrivermanager</artifactId>
            <version>${webdrivermanager.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>

            <!-- Copia metadatos de Allure al directorio de resultados -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>3.3.1</version>
                <executions>
                    <execution>
                        <id>copy-allure-metadata</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>copy-resources</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/allure-results</outputDirectory>
                            <resources>
                                <resource>
                                    <directory>${project.basedir}/src/test/resources</directory>
                                    <includes>
                                        <include>categories.json</include>
                                        <include>environment.properties</include>
                                        <include>executor.json</include>
                                    </includes>
                                </resource>
                            </resources>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- historial de Allure entre generaciones del reporte -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <executions>
                    <execution>
                        <id>copy-allure-history</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>
                                <mkdir dir="${project.build.directory}/allure-results/history"/>
                                <copy todir="${project.build.directory}/allure-results/history" overwrite="true" failonerror="false">
                                    <fileset dir="${project.build.directory}/allure-report/history" erroronmissingdir="false"/>
                                </copy>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!-- Maven Surefire Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven-surefire-plugin.version}</version>
                <configuration>
                    <systemPropertyVariables>
                        <cucumber.filter.tags>${cucumber.filter.tags}</cucumber.filter.tags>
                    </systemPropertyVariables>

                    <printSummary>true</printSummary>
                    <useFile>false</useFile>
                    <redirectTestOutputToFile>false</redirectTestOutputToFile>

                    <testFailureIgnore>true</testFailureIgnore>
                    <argLine>--add-opens java.base/java.lang=ALL-UNNAMED</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>